--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Government Rules Chatbot</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="~/css/style.css" />
     <style>
       html,
       body {
@@ -37,6 +37,6 @@
       <input type="text" id="user-input" placeholder="Type your message..." />
       <center><button id="send-button">Send</button></center>
     </div>
-    <script src="script.js"></script>
+    <script src="~/js/script.js"></script>
   </body>
 </html>
