--- a/Pages/Create.cshtml
+++ b/Pages/Create.cshtml
@@ -4,10 +4,13 @@
 @{
     ViewData["Title"] = "Create";
 }
+<head>
+    <title>Create</title>
+    <link rel="stylesheet" type="text/css" href="~/css/crud2.css" />
+ </head>
+<h1>Create Rule</h1>
+ <body>
 
-<h1>Create</h1>
-
-<h4>Rule</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -39,13 +42,13 @@
                 <span asp-validation-for="Rule.Source" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="button" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a class="button" asp-page="./Crud">Back to List</a>
 </div>
-
+</body>
