--- a/Pages/Crud.cshtml
+++ b/Pages/Crud.cshtml
@@ -7,6 +7,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="cache-control" content="no-store">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rule Database Management</title>
     <link rel="stylesheet" type="text/css" href="~/css/crud.css" />
@@ -57,8 +58,8 @@
                 @Html.DisplayFor(modelItem => item.Source)
             </td>
             <td>
-                <a class="button" asp-page="./Edit" asp-route-id="@item.RuleId">Edit</a>|
-                <a class="button" asp-page="./Details" asp-route-id="@item.RuleId">Details</a>|
+                <a class="button" asp-page="./Edit" asp-route-id="@item.RuleId">Edit</a>
+                <a class="button" asp-page="./Details" asp-route-id="@item.RuleId">Details</a>
                 <a class="button" asp-page="./Delete" asp-route-id="@item.RuleId">Delete</a>
             </td>
         </tr>
