--- a/Pages/Details.cshtml
+++ b/Pages/Details.cshtml
@@ -5,45 +5,71 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<html>
+  <head>
+    <title>Details</title>
+    <link rel="stylesheet" type="text/css" href="~/css/crud2.css" />
+    <style>
+      table.rule-table td:first-child {
+        width: 220px; /* Set the width of the first column as needed */
+        font-weight: bold; /* Make the labels bold */
+      }
+    </style>
+  </head>
+<body>
+<h1>Rule Details</h1>
 
+    <div>
+      <hr />
+      <table class="rule-table">
+        <tbody>
+          <tr>
+            <td>
+              @Html.DisplayNameFor(model => model.Rule.Title)
+            </td>
+            <td>
+              @Html.DisplayFor(model => model.Rule.Title)
+            </td>
+          </tr>
+          <tr>
+            <td>
+              @Html.DisplayNameFor(model => model.Rule.Category)
+            </td>
+            <td>
+              @Html.DisplayFor(model => model.Rule.Category)
+            </td>
+          </tr>
+          <tr>
+            <td>
+              @Html.DisplayNameFor(model => model.Rule.Content)
+            </td>
+            <td>
+              @Html.DisplayFor(model => model.Rule.Content)
+            </td>
+          </tr>
+          <tr>
+            <td>
+              @Html.DisplayNameFor(model => model.Rule.PublicationDate)
+            </td>
+            <td>
+              @Html.DisplayFor(model => model.Rule.PublicationDate)
+            </td>
+          </tr>
+          <tr>
+            <td>
+              @Html.DisplayNameFor(model => model.Rule.Source)
+            </td>
+            <td>
+              @Html.DisplayFor(model => model.Rule.Source)
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 <div>
-    <h4>Rule</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Rule.Title)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Rule.Title)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Rule.Category)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Rule.Category)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Rule.Content)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Rule.Content)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Rule.PublicationDate)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Rule.PublicationDate)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Rule.Source)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Rule.Source)
-        </dd>
-    </dl>
+    <a class="button" asp-page="./Edit" asp-route-id="@Model.Rule?.RuleId">Edit</a> |
+    <a class="button" asp-page="./Crud">Back to List</a>
 </div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Rule?.RuleId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
-</div>
+  </body>
+</html>
+
