--- a/Pages/Crud.cshtml
+++ b/Pages/Crud.cshtml
@@ -7,7 +7,9 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="cache-control" content="no-store">
+    <meta http-equiv='cache-control' content='no-cache'> 
+    <meta http-equiv='expires' content='0'> 
+    <meta http-equiv='pragma' content='no-cache'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rule Database Management</title>
     <link rel="stylesheet" type="text/css" href="~/css/crud.css" />
